sass/_frontpage.scss
$frontpage-tab-count: 3;

#frontpage {
  overflow:hidden;
  position:absolute;
  top:0;
  left:0;
  height:100%;
  width:100%;
  z-index:0;

  &.inactive {
    display:none;
  }

  &.menuActive {

    #frontpageContent {
      -webkit-transform:translate3d(17em, 0, 0);

      .overlay {
        visibility:visible;
        opacity:.6;
      }
    }
  }

  #drawerMenu {
    position:absolute;
    top:0;
    left:0;
    z-index:1;
    height:100%;
    width:17em;
    background:#eeeeee;

    i:first-child {
      border-top:0;
    }

    i:before {
      margin-right:1em;
    }

    i {
      padding:1em;
      font-size:1.2em;
      display:block;
      border-top:1px solid #dcdcdc;
    }
  }

  #frontpageContent {
    background:white;
    width:100%;
    min-height:100%;
    position:absolute;
    padding-top:38px;
    top:0;
    left:0;
    z-index:2;
    transition:-webkit-transform $transition-duration;
    -webkit-transform:translate3d(0,0,0);

    .overlay {
      visibility:hidden;
      position:absolute;
      top:0;
      left:0;
      width:100%;
      height:100%;
      background:black;
      opacity:0;
      transition:opacity $transition-duration;
      z-index:1001;
    }
  }

  nav {
    text-align:left;

    .searchInput {
      position:absolute;
      top:.2em;
      left:13%;
      width:86%;
      font-size:1.5em;
      transition:all $transition-duration;

      &.active {
        width:96%;
        left:2%;
      }

      .searchIcon {
        position:absolute;
        top:2px;
        left:1px;
        font-size:.95em;
        z-index:2;
      }

      input {
        padding-left:1.5em;
        z-index:1;
        position:absolute;
        left:0;
        top:0;
        width:100%;

        &.loading {
          background: {
            image:url(../images/ajax-loader.gif);
            repeat:no-repeat;
            position:98% 50%;
            size:27px;
          }
        }
      }

      .searchSuggestResults {
        margin:38px 0 0 0;
        padding:0;
        background:#efefef;
        box-shadow:0px 10px 22px 0px #717171;
        position:relative;
        overflow:auto;

        li:first-child {
          border-top:0;
        }

        li {
          padding:.7em 1em;
          border-top:1px solid #d7d7d7;
        }
      }
    }

  }

  #frontpage_tabs_menu {
    margin:0;
    padding:0;
    border-bottom:1px solid #9c9c9c;

    li {
      padding:1em 0 .1em 0;
      font-size:1.5em;
      display:inline-block;
      text-align: center;
      width:98% / $frontpage-tab-count;

      &.active {
        border-bottom:4px solid #9c9c9c;
      }
    }
  }

  #frontpage_tabs {
    height:100%;

    width:$frontpage-tab-count * 100%;
    transition:-webkit-transform $transition-duration;

    .tab {
      float:left;
      width:100%/$frontpage-tab-count;

      .destination {
        background:white;
        overflow:hidden;
        padding:.5em;

        &.touchdown {
          opacity:.5;
        }

        label {
          font-family: "RobotoRegular";
          font-size:1.2em;
          margin-top:.2em;
        }

        p {
          height:5.5em;
          overflow:hidden;
          position:relative;
        }

        p:after {
          content: "";
          text-align: right;
          position: absolute;
          bottom: 0;
          right: 0;
          width: 30%;
          height: 1.2em;
          background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
        }

        .photo {
          width:12em;
          max-width:40%;
          height:7.5em;
          background-repeat:no-repeat;
          background-size:cover;
          background-position:50% 50%;
          float:left;
          margin-right:1em;
        }
      }
    }
  }
}

